updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I currently work full time in sales</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Houston, TX</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Hanging out with my Wife and 2 dogs</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Not sure yet but excited to get into the industry and expore my options!</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Fort Worth, TX</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>This is something I have been interested in for years and am excited about a new career with unlimited opportunities!</p>
     </section>
 
     <footer id="footer">
